--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
     <span>hh:mm:ss</span>
 
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
